// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`veSelect render by isInput prop 1`] = `
<dl class="ve-dropdown ve-select">
  <dt class="ve-dropdown-dt"><a class="ve-dropdown-dt-selected" style="width: 90px;"><span><input placeholder="姓名" type="text" class="ve-select-input"><i class="ve-icon iconfont-vet icon-vet-bottom-arrow ve-select-toggle-icon"></i></span></a></dt>
  <div style="display: none;">
    <dd class="ve-dropdown-dd">
      <ul class="ve-dropdown-items" style="min-width: 90px; max-width: Infinitypx;">
        <div>
          <div class="ve-dropdown-items-warpper" style="max-height: 1000px;">
            <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left">Apple</a></li>
            <li class="ve-dropdown-items-li active"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left">Orange</a></li>
            <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left">Banana</a></li>
          </div>
        </div>
      </ul>
    </dd>
  </div>
</dl>
`;

exports[`veSelect render by isMultiple prop 1`] = `
<dl class="ve-dropdown ve-select">
  <dt class="ve-dropdown-dt"><a class="ve-dropdown-dt-selected" style="width: 90px;"><span><span class="ve-select-selected-span">Orange</span><i class="ve-icon iconfont-vet icon-vet-bottom-arrow ve-select-toggle-icon"></i></span></a></dt>
  <div style="display: none;">
    <dd class="ve-dropdown-dd">
      <ul class="ve-dropdown-items" style="min-width: 90px; max-width: Infinitypx;">
        <div>
          <div class="ve-dropdown-items-warpper" style="max-height: 1000px;">
            <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content"><input type="checkbox" class="ve-checkbox-input" value="Apple"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Apple</span></label></li>
            <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content ve-checkbox-checked"><input type="checkbox" class="ve-checkbox-input" value="Orange"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Orange</span></label></li>
            <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content"><input type="checkbox" class="ve-checkbox-input" value="Banana"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Banana</span></label></li>
          </div>
        </div>
      </ul>
    </dd>
  </div>
</dl>
`;

exports[`veSelect render by value prop 1`] = `
<dl class="ve-dropdown ve-select">
  <dt class="ve-dropdown-dt"><a class="ve-dropdown-dt-selected" style="width: 90px;"><span><span class="ve-select-selected-span">Orange</span><i class="ve-icon iconfont-vet icon-vet-bottom-arrow ve-select-toggle-icon"></i></span></a></dt>
  <div style="display: none;">
    <dd class="ve-dropdown-dd">
      <ul class="ve-dropdown-items" style="min-width: 90px; max-width: Infinitypx;">
        <div>
          <div class="ve-dropdown-items-warpper" style="max-height: 1000px;">
            <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left">Apple</a></li>
            <li class="ve-dropdown-items-li active"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left">Orange</a></li>
            <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left">Banana</a></li>
          </div>
        </div>
      </ul>
    </dd>
  </div>
</dl>
`;
